--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ repositories {
 
 dependencies {
     compile group: 'commons-lang', name: 'commons-lang', version: '[2.6,2.99999)'
-    compile group: 'io.vertx', name: 'vertx-core', version: '[3.2.1, 3.99999999)'
+    compile group: 'io.vertx', name: 'vertx-core', version: '3.3.2'
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '[2.3.1,2.99999)'
     compile group: 'commons-validator', name: 'commons-validator', version: '[1.4.0,1.99999)'
     compile group: 'commons-codec', name: 'commons-codec', version: '[1.9,1.99999]'
